--- a/votaUnicamp.Rmd
+++ b/votaUnicamp.Rmd
@@ -1,25 +1,24 @@
 ---
 title: "Vota Unicamp!"
-author: "Benilton S Carvalho"
+author: "Amanda, Bruno, Mariana, Melissa, Tamilyn e Yasmine"
 output: html_document
 ---
 
-## Setup
+#Introdução
 
-```{r input, message=FALSE}
-Sys.setlocale(locale='UTF-8')
+  Em meio à crise em que o Brasil se encontra, a educação foi afetada com cortes de orçamento e, infelizmente, isso inclui Universidades. Diante disso, o movimento grevista tem tomado conta da Unicamp. A greve foi decidida por meio de assembleias estudantis, contudo muito se questiona a respeito da representatividade das decisões tomadas uma vez que existe pouca adesão. Com intuito de verificar qual a opinião da classe estudantil foi criado o site “https://votaunicamp.herokuapp.com/” para que os alunos matriculados tanto em cursos de graduação e pós graduação votassem e se quisessem justificassem o voto.
+
+```{r input, message=FALSE, results='hide', echo=FALSE}
+if (Sys.info()['sysname'] == 'Darwin') Sys.setlocale(locale='UTF-8')
 library(stringr)
 library(rvest)
 library(googleVis)
 library(leaflet)
 page = read_html('http://votaunicamp.herokuapp.com/results/', encoding='UTF-8')
 tbl = html_table(page)[[2]]
-head(tbl)
 ```
 
-## Formatação de Dados
-
-```{r format}
+```{r format, message=FALSE, echo=FALSE, warning=FALSE}
 mytbl = data.frame(codigo=as.integer(str_extract(tbl$Curso, "^\\d+")),
                    nivel=NA,
                    curso=gsub("^(\\d+) - (.*)$", "\\2", tbl$Curso),
@@ -34,45 +33,139 @@ nivel[is.na(nivel)] = "Graduacao"
 mytbl$nivel = nivel
 rm(nivel)
 mytbl$curso = gsub("(Mes|Dou).+ em (.*)$", "\\2", mytbl$curso)
-head(mytbl)
 ```
 
-## Gauge Plots
-
-```{r plot_gauge}
-tbl0 = subset(mytbl, nivel=='Graduacao')
-tbl0$pnao = round(tbl0$nao/tbl0$total*100, 0)
-gauge = gvisGauge(tbl0[, c('curso', 'pnao')], 'curso', 'nao',
-                  options=list(min=0, max=100, greenFrom=0,
-                                 greenTo=20, yellowFrom=40, yellowTo=60,
-                                 redFrom=80, redTo=100, width=400, height=300))
-plot(gauge)
+```{r melhoropcaoinstitutos, echo=FALSE}
+setwd("~/Documentos/Github/votaunicampAnalytics")
+gradinst = cbind(nivel='Graduacao', read.table('Grad.csv', header=TRUE, sep=','))
+doutinst = cbind(nivel='Doutorado', read.table('Dout.csv', header=TRUE, sep=','))
+mestinst = cbind(nivel='Mestrado', read.table('Mestr.csv', header=TRUE, sep=','))
+names(gradinst) = names(doutinst) = names(mestinst) = c('nivel', 'codigo', 'instituto', 'area')
+inst = rbind(gradinst, doutinst, mestinst)
+rm(gradinst, doutinst, mestinst)
+mytbl = merge(mytbl, inst)
 ```
 
-## Obtenção de Dados Geográficos
+#Objetivos
 
-Obter localizações (lat/lon) por meio do OpenStreet Maps:
+Deseja-se verificar a proporção de alunos contrários à greve estudantil. Além disso também temos o intuito de estudar o comportamento da classe, como por exemplo, se existe uma relação entre a área de estudo e o voto. Assim podemos caracterizar o perfil do aluno favorável ou contrário a mobilização.
 
-- Abrir OpenStreet Maps (OSM) em (http://www.openstreetmap.org/#map=16/-22.8173/-47.0677)
-- Dar zoom máximo no instituto de interesse
-- Olhar o endereço na barra de endereço após o zoom
-- Atualizar o arquivo `institutos.tab` (separado por tabulações) abaixo com as novas informações
+#Metodologia
 
-```{r enderecos}
-ends = read.table('institutos.tab', sep='\t', header=TRUE)
+## Formatação de Dados
+
+Extraímos do site uma tabela com o número de votos de cada curso, sim não e abstenho, incluindo cursos da Unicamp campus Limeira e Piracicaba.
+
+```{r echo=FALSE}
+head(tbl)
+```
+
+
+```{r echo=FALSE, message=FALSE}
+ends = data.frame(instituto=c('IMECC', 'IFGW', 'IB', 'FEM', 'FEF', 'FEEC', 'FEC', 'FEA', 'FCM', 'IFCH','IEL', 'IA', 'IC', 'IE', 'IG', 'IQ', 'FE', 'FEAGRI', 'FEQ', 'PROFIS', 'FCF'),
+           lat=c(-22.81583,-22.81657,-22.81935,-22.81938,-22.81476,-22.82132,-22.81596,-22.82063,-22.83063,-22.81546, -22.81537, -22.81531, -22.81488, -22.81480, -22.81328, -22.81889, -22.81658, -22.81927, -22.81989, -22.81749, -22.81770),
+           lon=c(-47.06769,-47.06698,-47.06953,-47.06592,-47.07333,-47.06587,-47.06383,-47.06746,-47.06199,-47.06838,-47.06909, -47.07009, -47.06484, -47.06590, -47.06871, -47.06779, -47.06566, -47.06042,-47.06511, -47.06847, -47.07084 )) 
+```
+
+
+
+##Proporções
+
+```{r , message=FALSE, echo=FALSE, warning=FALSE}
+#Proporção de Não
+pnao = with(mytbl, nao/total)
+mes = qnorm(.975)*sqrt(1/(4*mytbl$total))
+ics = cbind(pmax(pnao-mes, 0), pmin(pnao+mes, 1))
+colnames(ics) = c("lowerpnao", "upperpnao")
+mytbl$pnao = pnao
+mytbl = cbind(mytbl, ics)
+rm(pnao, mes, ics)
+```
+
+
+```{r message=FALSE, echo=FALSE, warning=FALSE}
+#Proporção de Sim
+psim = with(mytbl, sim/total)
+mes = qnorm(.975)*sqrt(1/(4*mytbl$total))
+ics = cbind(pmax(psim-mes, 0), pmin(psim+mes, 1))
+mytbl$psim=psim
+mytbl$lowerpsim=ics[,1]
+mytbl$upperpsim=ics[,2]
+rm(psim, mes, ics)
+```
+
+
+```{r message=FALSE, echo=FALSE, warning=FALSE}
+#Proporção de Abstenho
+pabs = with(mytbl, abstencao/total)
+mes = qnorm(.975)*sqrt(1/(4*mytbl$total))
+ics = cbind(pmax(pabs-mes, 0), pmin(pabs+mes, 1))
+mytbl$pabs=pabs
+mytbl$lowerpabs=ics[,1]
+mytbl$upperpabs=ics[,2]
+```
+
+###Proporções por instituto
+
+```{r, echo=FALSE}
+library(data.table)
+mytbl = as.data.table(mytbl)
+dados = mytbl[, list(total=sum(total), sim=sum(sim), nao=sum(nao), abstencao=sum(abstencao)), by=instituto]
+dados = as.data.frame(dados)
+dados$psim = with(dados, sim/total)
+dados$pnao = with(dados, nao/total)
+dados$pabs = with(dados, abstencao/total)
+```
+
+##Análises Exploratórias
+
+Podemos fazer algumas análises exploratórias para estudar o comportamento dos nossos dados. Uma das maneiras que encontramos para isso foi mapear o campus da Unicamp a fim de ver qual o posicionamento de cada instituto. Temos abaixo o mapeamento de acordo com a proporção de votos contrários à greve por instituto, quanto mais vermelho o indicador menor a proporção e quanto mais azul maior a proporção.
+
+```{r enderecos, echo=FALSE, eval=FALSE}
 map = leaflet()
 map = addTiles(map)
 map = addCircleMarkers(map, lat=ends$lat, lng=ends$lon, popup = ends$instituto)
+
+ends = merge(ends, dados)
+
+pal= colorQuantile("RdBu",ends$propn, n=8)
+map = leaflet()
+map = addTiles(map)
+map = addCircleMarkers(map, lat=ends$lat, lng=ends$lon, popup = ends$instituto, color = pal(ends$pnao))
 map
 ```
 
-## Intervalos de Confiança
+Também podemos estudar a abrangência do site, ou seja, quais institutos de fato votaram e quantos votos temos. O que encontra-se na Figura 2.
 
-```{r stats}
-p = with(mytbl, nao/(total))
-mes = qnorm(.975)*sqrt(1/(4*mytbl$total))
-ics = cbind(pmax(p-mes, 0), pmin(p+mes, 1))
-colnames(ics) = c("lower", "upper")
-mytbl$p = p
-mytbl = cbind(mytbl, ics)
+```{r grafbar, echo=FALSE, fig.cap="Gráfico do total de votos por instituto"}
+library(ggplot2)
+ggplot(dados, aes(reorder(instituto, total), total)) + geom_bar(stat='identity') + coord_flip() + theme_bw()
 ```
+
+Na tabela abaixo temos mais detalhadamente os votos de cada instituto.
+
+```{r, echo=FALSE, fig.cap="Tabela de votos por instituto"}
+library(formattable)
+dados2 = dados[, c('instituto', 'nao', 'sim', 'abstencao', 'total')]
+names(dados2) = c("Instituto", "Não", "Sim", "Abstenções", "Total")
+formattable(dados2)
+```
+
+##Estimador Para a Proporção
+
+Uma maneira de estimar a proporção para a população de alunos da Unicamp é através do estimador de *Bootstrap*. Para isso consideraremos os alunos que votaram no site uma amostra da população. 
+
+```{r dados, echo=FALSE}
+tblnomes=html_table(page)[[3]]
+pop=tblnomes[,c(4,5)]
+```
+
+```{r boot}
+media=function(dados, indices){
+  fit0=lm(Employed ~ Armed.Forces + Population, data = dados[indices,])
+  coef(fit0)
+}
+library(boot)
+res_boot = boot(pop, pars, R=10000)
+```
+
