--- a/votaUnicamp.Rmd
+++ b/votaUnicamp.Rmd
@@ -161,11 +161,10 @@ pop=tblnomes[,c(4,5)]
 ```
 
 ```{r boot}
-media=function(dados, indices){
-  fit0=lm(Employed ~ Armed.Forces + Population, data = dados[indices,])
-  coef(fit0)
+prop=function(pop, indices){
+  length(which(pop[indices,]$Voto == "Não"))/nrow(pop[indices,])
 }
 library(boot)
-res_boot = boot(pop, pars, R=10000)
+res_boot = boot(pop, prop, R=10000)
 ```
 
